# tax-man

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  headers.txt  pyproject.toml
config/: workflows.yaml
document-api/: README.md  pyproject.toml
document-api/src/document_api/: __init__.py  app.py  models.py  store.py  telemetry.py  workflow_runner.py
document-api/tests/: test_app.py  test_app_edge_cases.py  test_store.py  test_telemetry.py  test_workflow_runner.py
strategy/: README.md  pyproject.toml
strategy/src/strategy/: __init__.py  base.py  extraction.py  llm.py  parse.py
strategy/src/strategy/k1/: __init__.py  regex_extractor.py
strategy/src/strategy/k1/data/: regex_field_config.yaml
strategy/src/strategy/models/: __init__.py
strategy/src/strategy/models/k1/: __init__.py  pydantic_model.py
strategy/test/: conftest.py  test_additional_coverage.py  test_base.py  test_extraction_edge.py  test_llm_helpers.py  test_parse_strategy.py  test_pydantic_model_lines.py  test_regex_helpers.py  test_strategies.py  test_workflow.py
strategy/test/fixtures/MockParsePdfToMarkdown/mock_markdown_response_body/: doc_1.md  doc_2.md  doc_3.md
weights-and-biases/: README.md  pyproject.toml
weights-and-biases/datasets/pdf-set-1/ground-truth/: eval_set.csv
weights-and-biases/src/weights_and_biases/: __init__.py  cli.py  evaluation.py  wandb_eval.py
workflow/: README.md  pyproject.toml
workflow/src/workflow/: __init__.py  config.py  context.py  core.py  k1.py
workflow/test/: conftest.py  test_config_and_context.py
