[project]
name = "weights-and-biases"
version = "0.1.0"
description = "Evaluation tooling and datasets for strategy experiments."
requires-python = ">=3.13.7,<3.14"
dependencies = [
    "wandb>=0.23.1",
    "weave>=0.52.22",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weights_and_biases"]

[project.scripts]
taxman-eval = "weights_and_biases.cli:main"
taxman-eval-wandb = "weights_and_biases.wandb_eval:main"
