[project]
name = "workflow"
version = "0.1.0"
description = "Workflow orchestration for strategy pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strategy",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["workflow*"]
